fix forgot password also add visibility toggle to password field

--- a/public/styles/partials/buttons.css
+++ b/public/styles/partials/buttons.css
@@ -86,3 +86,19 @@ button.button {
 .actions .button + button {
   margin-left: 0.5rem;
 }
+
+.eye-container {
+  display: flex;
+  justify-content: center;
+}
+
+.eye-icon {
+  width: 24px;
+  margin-left: -36px;
+  cursor: pointer;
+  opacity: .5;
+}
+
+.eye-icon.on {
+  opacity: 1;
+}
