--- a/public/styles/partials/modal.css
+++ b/public/styles/partials/modal.css
@@ -20,6 +20,8 @@ div[class*="modal-wrapper"].on  {
 
   visibility: visible;
   opacity: 1;
+
+  z-index: 3;
 }
 
 div[class*="modal"] {
